--- a/theme/basic/css/main.css
+++ b/theme/basic/css/main.css
@@ -90,15 +90,43 @@
 
 
 
+@media only screen and (min-width:600px) {
+    .tabcontainer {
+        width: 580px;
+        margin: auto;
+    }
+}
+@media screen and (min-width:980px) {
+    .tabcontainer {
+        width: 940px;
+    }
+}
 
-
-
-
-
-
-
-
-
-/**/
-
-
+@media screen and (max-width: 480px) {
+    div.tablist {
+      display: none;
+    }
+    .tabpanels__drawer {
+      background: #0000ff;
+      background-image: -webkit-linear-gradient(#0000ff 0, #000080 100%);
+      background-image: -moz-linear-gradient(#0000ff 0, #000080 100%);
+      background-image: -o-linear-gradient(#0000ff 0, #000080 100%);
+      background-image: -ms-linear-gradient(#0000ff 0, #000080 100%);
+      background: linear-gradient(#0000ff 0, #000080 100%);
+      color: #fff;
+      border-top: 1px solid #333;
+      margin: 0;
+      padding: 5px 20px;
+      cursor: pointer;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+    .d_active {
+      background-color: #666;
+      color: #fff;
+    }
+  }
